Lots of stuff
Signed-off-by: CC007 <Coolcat_the_best2@Hotmail.com>